--- a/.github/workflows/checkout.yml
+++ b/.github/workflows/checkout.yml
@@ -14,3 +14,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.event.inputs.commitTag }}
+
+      - name: Test 1
+        run: |
+          git status
+          git log
